<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/grid_order_total"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:useDefaultMargins="true"
    android:columnCount="2"
    android:rowCount="4">

    <TextView
        android:id="@+id/text_view_order_quantity_label"
        style="@style/TextAppearance.TailorMade.Caption.BlackMedium"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/order_quantity_label" />

    <TextView
        android:id="@+id/text_view_order_quantity"
        style="@style/TextAppearance.TailorMade.Caption.BlackHigh"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="end"
        tools:text="@string/order_quantity_value_label" />

    <TextView
        android:id="@+id/text_view_order_total_discount_label"
        style="@style/TextAppearance.TailorMade.Caption.BlackMedium"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/order_total_discount_label" />

    <TextView
        android:id="@+id/text_view_order_total_discount"
        style="@style/TextAppearance.TailorMade.Caption.BlackHigh"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="end"
        tools:text="@string/order_total_discount_value_label" />

    <TextView
        android:id="@+id/text_view_order_total_price_label"
        style="@style/TextAppearance.TailorMade.Caption.BlackMedium"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/order_total_price_label" />

    <TextView
        android:id="@+id/text_view_order_total_price"
        style="@style/TextAppearance.TailorMade.Caption.Primary"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="end"
        tools:text="@string/order_total_price_value_label" />

    <TextView
        android:id="@+id/text_view_order_total_status_label"
        style="@style/TextAppearance.TailorMade.Caption.BlackMedium"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/order_total_status_label"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_view_order_total_status_rejected"
        style="@style/TextAppearance.TailorMade.Caption.Red"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="end"
        android:visibility="gone"
        tools:text="@string/order_total_status_label"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_view_order_total_status_accepted"
        style="@style/TextAppearance.TailorMade.Caption.Green"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="end"
        android:visibility="gone"
        tools:text="@string/order_total_status_label"
        tools:visibility="visible" />

</GridLayout>