<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_16">

        <ImageView
            android:id="@+id/image_view_notification_type"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_view_notification_type"
            style="@style/TextAppearance.TailorMade.Caption.BlackMedium2"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4"
            app:layout_constraintBottom_toBottomOf="@id/image_view_notification_type"
            app:layout_constraintStart_toEndOf="@id/image_view_notification_type"
            app:layout_constraintTop_toTopOf="@id/image_view_notification_type"
            tools:text="@string/notification_type_label" />

        <TextView
            android:id="@+id/text_view_notification_time"
            style="@style/TextAppearance.TailorMade.Caption.BlackLow"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/notification_time_label" />

        <TextView
            android:id="@+id/text_view_notification_title"
            style="@style/TextAppearance.TailorMade.Headline3.Primary.Bold"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            app:layout_constraintBottom_toTopOf="@id/text_view_notification_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_notification_type"
            tools:text="@string/notification_title_label" />

        <TextView
            android:id="@+id/text_view_notification_content"
            style="@style/TextAppearance.TailorMade.Body2.BlackMedium"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_notification_title"
            tools:text="@string/notification_content_label" />

        <ImageView
            android:id="@+id/image_view_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_notification_content"
            tools:ignore="ContentDescription"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>